--- a/Course.csproj
+++ b/Course.csproj
@@ -7,4 +7,10 @@
         <RootNamespace>gettingstarted</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.0" />
+      <PackageReference Include="NUnit" Version="3.13.3" />
+      <PackageReference Include="NUnitTestAdapter" Version="2.3.0" />
+    </ItemGroup>
+
 </Project>
